--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES6",
+    "target": "ESNext",
+    "module": "ESNext",
     "outDir": "./dist/",
     "moduleResolution": "node",
-    "experimentalDecorators": true,
     "lib": [
       "esnext",
       "esnext.asynciterable",
