--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
     "pre-commit": "^1.2.2",
+    "terser-webpack-plugin": "^5.3.6",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.3.0",
